# ocmfet-server-feedback

./: CMakeLists.txt  README.md  compile.sh  run.sh
src/: acqer.cpp  acquirer.cpp  acquirer.hpp  hw_peripherals.cpp  hw_peripherals.hpp  main.cpp  server.cpp  server.hpp
